<resources>
    <string name="app_name">My Application</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_yen_label">Yen</string>
    <string name="btn_pound_label">Pound</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btn_reset_lable">Reset</string>
</resources>