<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/rmb_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/showOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_dollar"
        android:text="@string/btn_dollar_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_euro"
        android:text="@string/btn_euro_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_won"
        android:text="@string/btn_won_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_yen"
        android:text="@string/btn_yen_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_pound"
        android:text="@string/btn_pound_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>

