<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="true"
    android:background="#F8F7F6"
    tools:context=".ScoreActivity">

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="540dp"
        android:onClick="btnReset"
        android:text="@string/btn_reset_lable"
        app:backgroundTint="#FF9800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="TeamA"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                android:textSize="65sp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd3"
                android:text="@string/lable_add3"
                app:backgroundTint="#FF9800" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd2"
                android:text="@string/lable_add2"
                app:backgroundTint="#FF9800" />

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnAdd1"
                android:text="@string/lable_add1"
                app:backgroundTint="#FF9800" />
        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#00BCD4"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/teamName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="TeamB"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="0"
                android:textSize="65sp" />

            <Button
                android:id="@+id/btn_3b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd3"
                android:text="@string/lable_add3"
                app:backgroundTint="#FF9800" />

            <Button
                android:id="@+id/btn_2b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btnAdd2"
                android:text="@string/lable_add2"
                app:backgroundTint="#FF9800" />

            <Button
                android:id="@+id/btn_1b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnAdd1"
                android:text="@string/lable_add1"
                app:backgroundTint="#FF9800" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>